--- a/compose.yml
+++ b/compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - FLASK_ENV=production  # Example: Set environment variables if needed
       - FLASK_APP=app.py
-      - GOOGLE_API_KEY=your_api_key
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
     networks:
       - app-network
 
